--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+@theme inline {
+  --color-primary: #FFFFFF;
+}
+
+
+body {
+  /* color: white; */
+  /* background-color: var(--color-primary); */
+  background-color: black;
+}
